compiler/testData/diagnostics/tests/secondaryConstructors/kt6994.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
// !WITH_NEW_INFERENCE
class X<T> {
    constructor(t: T, i: Int): this(<!NI;TYPE_MISMATCH!><!NI;TYPE_MISMATCH!><!TYPE_MISMATCH!>i<!><!><!>, 1)
}
